--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
       <button>Acheter à 1€</button>
     </div>
     <div class="photo-card mouvement active">
-      <img src="photo-toro.JPG" alt="Toro" onclick="openModal('photo-toro.JPG')">
+      <img src="https://github.com/user-attachments/assets/054fbe66-ed64-4bf1-a8d0-9422caa653e4" alt="Toro" onclick="openModal('https://github.com/user-attachments/assets/054fbe66-ed64-4bf1-a8d0-9422caa653e4')">
       <p>Course camarguaise</p>
       <button>Acheter à 1€</button>
     </div>
