--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
       <button>Acheter à 1€</button>
     </div>
     <div class="photo-card mouvement active">
-      <img src="photo-voiture.jpg" alt="Voiture" onclick="openModal('photo-voiture.jpg')">
+      <img src="https://github.com/user-attachments/assets/d31467c4-17bd-48bf-9d9c-dce14dccf5a5" alt="Voiture" onclick="openModal('https://github.com/user-attachments/assets/d31467c4-17bd-48bf-9d9c-dce14dccf5a5')">
       <p>Porche flou de mouvement artistique</p>
       <button>Acheter à 1€</button>
     </div>
