--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
       <button>Acheter à 1€</button>
     </div>
     <div class="photo-card ville active">
-      <img src="photo-poubelle.jpg" alt="Ville" onclick="openModal('photo-poubelle.jpg')">
+      <img src="https://github.com/user-attachments/assets/e34aaaa9-9eb1-4a86-9479-efb972d2d00e" alt="Ville" onclick="openModal('https://github.com/user-attachments/assets/e34aaaa9-9eb1-4a86-9479-efb972d2d00e')">
       <p>Photo de rue</p>
       <button>Acheter à 1€</button>
     </div>
