--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
   <div class="gallery">
     <div class="photo-card nature active">
-      <img src="soleil.JPG" alt="Soleil" onclick="openModal('soleil.JPG')">
+      <img src="https://github.com/user-attachments/assets/26856d65-234e-4b21-9e5d-bbb2478c13b4" alt="Soleil" onclick="openModal('https://github.com/user-attachments/assets/26856d65-234e-4b21-9e5d-bbb2478c13b4')">
       <p>Coucher de soleil en Corse</p>
       <button>Acheter à 1€</button>
     </div>
