--- a/index.html
+++ b/index.html
@@ -275,6 +275,10 @@
       }
     });
   }
+  function ajouterAuPanier(nomPhoto) {
+  alert(`"${nomPhoto}" a été ajouté au panier !`);
+}
+
 </script>
 
 </body>
