--- a/index.html
+++ b/index.html
@@ -244,9 +244,8 @@
 
 <section id="contact" class="contact-section">
   <h2>Contactez-moi</h2>
-  <a href="mailto:beltransoan@gmail.com?
-    subject=subject texte">
-    your visible link text</a>
+ <a href="mailto:beltransoan@gmail.com?subject=Demande%20d'information%20depuis%20le%20site">Me contacter par mail</a>
+
   
 </section>
 
