--- a/index.html
+++ b/index.html
@@ -177,6 +177,53 @@
     .contact-form button:hover {
       background-color: #45a049;
     }
+    #cart-icon {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  background-color: #4caf50;
+  color: white;
+  padding: 10px 15px;
+  border-radius: 50px;
+  cursor: pointer;
+  font-size: 18px;
+  z-index: 999;
+  box-shadow: 0 0 10px rgba(0,0,0,0.3);
+}
+
+.cart-content {
+  background-color: #fff;
+  color: #000;
+  padding: 30px;
+  border-radius: 10px;
+  max-width: 400px;
+  max-height: 80%;
+  overflow-y: auto;
+  position: relative;
+}
+
+.cart-content h2 {
+  margin-top: 0;
+}
+
+#cart-items li {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 0;
+  background-color: #f5f5f5;
+  padding: 10px;
+  border-radius: 8px;
+}
+
+#cart-items button {
+  background-color: #f44336;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
   </style>
 </head>
 <body>
