--- a/index.html
+++ b/index.html
@@ -269,22 +269,23 @@
     <div class="photo-card nature active">
       <img src="https://github.com/user-attachments/assets/26856d65-234e-4b21-9e5d-bbb2478c13b4" alt="Soleil" onclick="openModal('https://github.com/user-attachments/assets/26856d65-234e-4b21-9e5d-bbb2478c13b4')">
       <p>Coucher de soleil en Corse</p>
-      <button>Acheter à 1€</button>
+      <button onclick="ajouterAuPanier('Coucher de soleil en Corse')">Acheter à 1€</button>
+
     </div>
     <div class="photo-card mouvement active">
       <img src="https://github.com/user-attachments/assets/d31467c4-17bd-48bf-9d9c-dce14dccf5a5" alt="Voiture" onclick="openModal('https://github.com/user-attachments/assets/d31467c4-17bd-48bf-9d9c-dce14dccf5a5')">
       <p>Porche flou de mouvement artistique</p>
-      <button>Acheter à 1€</button>
+<button onclick="ajouterAuPanier('Coucher de soleil en Corse')">Acheter à 1€</button>
     </div>
     <div class="photo-card ville active">
       <img src="https://github.com/user-attachments/assets/e34aaaa9-9eb1-4a86-9479-efb972d2d00e" alt="Ville" onclick="openModal('https://github.com/user-attachments/assets/e34aaaa9-9eb1-4a86-9479-efb972d2d00e')">
       <p>Photo de rue</p>
-      <button>Acheter à 1€</button>
+<button onclick="ajouterAuPanier('Coucher de soleil en Corse')">Acheter à 1€</button>
     </div>
     <div class="photo-card mouvement active">
       <img src="https://github.com/user-attachments/assets/054fbe66-ed64-4bf1-a8d0-9422caa653e4" alt="Toro" onclick="openModal('https://github.com/user-attachments/assets/054fbe66-ed64-4bf1-a8d0-9422caa653e4')">
       <p>Course camarguaise</p>
-      <button>Acheter à 1€</button>
+<button onclick="ajouterAuPanier('Coucher de soleil en Corse')">Acheter à 1€</button>
     </div>
   </div>
 </section>
