--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Galerie en Ligne de Soan BELTRAN</title>
-  <link rel="stylesheet" href="style.css">
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: linear-gradient(to bottom right, #2196f3, #4caf50); /* Dégradé bleu → vert */
+      background: linear-gradient(to bottom right, #2196f3, #4caf50);
       color: #fff;
     }
 
@@ -19,19 +18,14 @@
       text-align: center;
     }
 
-    header h1 {
+    header h1, header p {
       margin: 0;
-    }
-
-    header p {
-      margin: 10px 0 0;
-      font-size: 1.2em;
     }
 
     nav ul {
       list-style: none;
       padding: 0;
-      margin: 10px 0 0;
+      margin-top: 10px;
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
@@ -82,6 +76,21 @@
       width: 100%;
       border-radius: 10px;
       cursor: pointer;
+    }
+
+    .photo-card button {
+      margin-top: 10px;
+      background-color: #fff;
+      color: #000;
+      border: none;
+      padding: 10px 15px;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+
+    .photo-card button:hover {
+      background-color: #ddd;
     }
 
     .filter-buttons {
@@ -135,11 +144,9 @@
       padding: 20px;
     }
 
-    /* Formulaire de contact */
     .contact-section {
       background: rgba(255,255,255,0.1);
       padding: 40px 20px;
-      text-align: center;
     }
 
     .contact-form {
@@ -149,19 +156,11 @@
       flex-direction: column;
     }
 
-    .contact-form label {
-      text-align: left;
-      margin-bottom: 5px;
-      font-weight: bold;
-    }
-
-    .contact-form input,
-    .contact-form textarea {
+    .contact-form input, .contact-form textarea {
       padding: 10px;
       margin-bottom: 20px;
       border: none;
       border-radius: 10px;
-      font-size: 1em;
     }
 
     .contact-form button {
@@ -169,7 +168,6 @@
       color: white;
       border: none;
       padding: 12px;
-      font-size: 1em;
       border-radius: 10px;
       cursor: pointer;
     }
@@ -177,53 +175,49 @@
     .contact-form button:hover {
       background-color: #45a049;
     }
-    #cart-icon {
-  position: fixed;
-  top: 20px;
-  right: 20px;
-  background-color: #4caf50;
-  color: white;
-  padding: 10px 15px;
-  border-radius: 50px;
-  cursor: pointer;
-  font-size: 18px;
-  z-index: 999;
-  box-shadow: 0 0 10px rgba(0,0,0,0.3);
-}
 
-.cart-content {
-  background-color: #fff;
-  color: #000;
-  padding: 30px;
-  border-radius: 10px;
-  max-width: 400px;
-  max-height: 80%;
-  overflow-y: auto;
-  position: relative;
-}
+    /* Panier stylisé */
+    #panier {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      background-color: rgba(255, 255, 255, 0.9);
+      color: #000;
+      padding: 15px;
+      border-radius: 12px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+      width: 250px;
+      max-height: 300px;
+      overflow-y: auto;
+      z-index: 2000;
+    }
 
-.cart-content h2 {
-  margin-top: 0;
-}
+    #panier h3 {
+      margin-top: 0;
+      text-align: center;
+    }
 
-#cart-items li {
-  display: flex;
-  justify-content: space-between;
-  margin: 10px 0;
-  background-color: #f5f5f5;
-  padding: 10px;
-  border-radius: 8px;
-}
+    .panier-item {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 10px;
+      background: #eee;
+      padding: 8px;
+      border-radius: 6px;
+    }
 
-#cart-items button {
-  background-color: #f44336;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  padding: 5px 10px;
-  cursor: pointer;
-}
+    .panier-item span {
+      flex: 1;
+    }
 
+    .remove-btn {
+      background: none;
+      border: none;
+      color: red;
+      font-weight: bold;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
@@ -239,17 +233,12 @@
       <li><a href="#contact">Me contacter</a></li>
     </ul>
   </nav>
-  <div id="cart-icon" onclick="toggleCart()">🛒 (<span id="cart-count">0</span>)</div>
-
-<div id="cart-modal" class="modal" onclick="toggleCart()">
-  <div class="cart-content" onclick="event.stopPropagation()">
-    <span class="close" onclick="toggleCart()">&times;</span>
-    <h2>Votre Panier</h2>
-    <ul id="cart-items"></ul>
-  </div>
-</div>
-
 </header>
+
+<div id="panier">
+  <h3>🛒 Panier</h3>
+  <div id="contenu-panier"></div>
+</div>
 
 <section id="accueil" class="section">
   <h2>Bienvenue dans notre Galerie de Photos Naturelles</h2>
@@ -267,26 +256,11 @@
 
   <div class="gallery">
     <div class="photo-card nature active">
-      <img src="https://github.com/user-attachments/assets/26856d65-234e-4b21-9e5d-bbb2478c13b4" alt="Soleil" onclick="openModal('https://github.com/user-attachments/assets/26856d65-234e-4b21-9e5d-bbb2478c13b4')">
-      <p>Coucher de soleil en Corse</p>
-      <button onclick="ajouterAuPanier('Coucher de soleil en Corse')">Acheter à 1€</button>
-
+      <img src="image1.jpg" alt="Nature" onclick="openModal('image1.jpg')">
+      <p>Coucher de soleil</p>
+      <button onclick="ajouterAuPanier('Coucher de soleil')">Acheter à 1€</button>
     </div>
-    <div class="photo-card mouvement active">
-      <img src="https://github.com/user-attachments/assets/d31467c4-17bd-48bf-9d9c-dce14dccf5a5" alt="Voiture" onclick="openModal('https://github.com/user-attachments/assets/d31467c4-17bd-48bf-9d9c-dce14dccf5a5')">
-      <p>Porche flou de mouvement artistique</p>
-<button onclick="ajouterAuPanier('Coucher de soleil en Corse')">Acheter à 1€</button>
-    </div>
-    <div class="photo-card ville active">
-      <img src="https://github.com/user-attachments/assets/e34aaaa9-9eb1-4a86-9479-efb972d2d00e" alt="Ville" onclick="openModal('https://github.com/user-attachments/assets/e34aaaa9-9eb1-4a86-9479-efb972d2d00e')">
-      <p>Photo de rue</p>
-<button onclick="ajouterAuPanier('Coucher de soleil en Corse')">Acheter à 1€</button>
-    </div>
-    <div class="photo-card mouvement active">
-      <img src="https://github.com/user-attachments/assets/054fbe66-ed64-4bf1-a8d0-9422caa653e4" alt="Toro" onclick="openModal('https://github.com/user-attachments/assets/054fbe66-ed64-4bf1-a8d0-9422caa653e4')">
-      <p>Course camarguaise</p>
-<button onclick="ajouterAuPanier('Coucher de soleil en Corse')">Acheter à 1€</button>
-    </div>
+    <!-- Ajoute d'autres cartes ici -->
   </div>
 </section>
 
@@ -297,14 +271,12 @@
 
 <section id="apropos" class="section">
   <h2>À propos</h2>
-  <p>Nous proposons des photos numériques de qualité professionnelle, capturées dans des paysages naturels à travers le monde.</p>
+  <p>Photos numériques de qualité, capturées dans le monde naturel.</p>
 </section>
 
 <section id="contact" class="contact-section">
   <h2>Contactez-moi</h2>
- <a href="mailto:beltransoan@gmail.com?subject=Demande%20d'information%20depuis%20le%20site">Me contacter par mail</a>
-
-  
+  <a href="mailto:beltransoan@gmail.com?subject=Contact">Envoyez-moi un mail</a>
 </section>
 
 <footer>
@@ -312,58 +284,33 @@
 </footer>
 
 <script>
-  function openModal(imageSrc) {
-    const modal = document.getElementById("modal");
-    const modalImg = document.getElementById("modal-img");
-    modal.style.display = "flex";
-    modalImg.src = imageSrc;
+  function openModal(src) {
+    document.getElementById("modal").style.display = "flex";
+    document.getElementById("modal-img").src = src;
   }
 
   function closeModal() {
     document.getElementById("modal").style.display = "none";
   }
 
-  function filterPhotos(category) {
-    const cards = document.querySelectorAll('.photo-card');
-    cards.forEach(card => {
+  function filterPhotos(cat) {
+    document.querySelectorAll('.photo-card').forEach(card => {
       card.classList.remove('active');
-      if (category === 'all' || card.classList.contains(category)) {
+      if (cat === 'all' || card.classList.contains(cat)) {
         card.classList.add('active');
       }
     });
   }
-  function ajouterAuPanier(nomPhoto) {
-  alert(`"${nomPhoto}" a été ajouté au panier !`);
-}
-let panier = [];
 
-function ajouterAuPanier(photo) {
-  panier.push(photo);
-  majPanier();
-}
-
-function majPanier() {
-  document.getElementById("cart-count").textContent = panier.length;
-  const ul = document.getElementById("cart-items");
-  ul.innerHTML = "";
-  panier.forEach((item, index) => {
-    const li = document.createElement("li");
-    li.innerHTML = `${item} <button onclick="retirerDuPanier(${index})">❌</button>`;
-    ul.appendChild(li);
-  });
-}
-
-function retirerDuPanier(index) {
-  panier.splice(index, 1);
-  majPanier();
-}
-
-function toggleCart() {
-  const modal = document.getElementById("cart-modal");
-  modal.style.display = modal.style.display === "flex" ? "none" : "flex";
-}
-
+  function ajouterAuPanier(nom) {
+    const panier = document.getElementById('contenu-panier');
+    const item = document.createElement('div');
+    item.className = 'panier-item';
+    item.innerHTML = `<span>${nom} - 1€</span><button class="remove-btn" onclick="this.parentElement.remove()">✕</button>`;
+    panier.appendChild(item);
+  }
 </script>
 
 </body>
 </html>
+
