--- a/index.html
+++ b/index.html
@@ -1,1 +1,68 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Galerie de Soan BELTRAN</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <h1>🌈 Galerie de Soan</h1>
+    <nav>
+      <ul>
+        <li><a href="#accueil">Accueil</a></li>
+        <li><a href="#galerie">Galerie</a></li>
+        <li><a href="#apropos">À propos</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><button onclick="toggleCart()">🛒 Panier (<span id="cart-count">0</span>)</button></li>
+      </ul>
+    </nav>
+  </header>
 
+  <section id="accueil" class="section">
+    <h2>Bienvenue !</h2>
+    <p>Explorez et achetez mes photos numériques pour seulement 1€ chacune.</p>
+  </section>
+
+  <section id="galerie" class="section">
+    <h2>Galerie</h2>
+    <div class="gallery">
+      <div class="photo-card">
+        <img src="https://via.placeholder.com/300" alt="Nature 1">
+        <p>Nature lumineuse</p>
+        <button onclick="addToCart('Nature lumineuse')">Acheter à 1€</button>
+      </div>
+      <div class="photo-card">
+        <img src="https://via.placeholder.com/300" alt="Ville 1">
+        <p>Ville en mouvement</p>
+        <button onclick="addToCart('Ville en mouvement')">Acheter à 1€</button>
+      </div>
+    </div>
+  </section>
+
+  <section id="apropos" class="section">
+    <h2>À propos</h2>
+    <p>Je suis photographe passionné, et je propose mes clichés au format numérique à prix accessible.</p>
+  </section>
+
+  <section id="contact" class="section">
+    <h2>Contact</h2>
+    <p>Écrivez-moi : <a href="mailto:beltransoan@gmail.com">beltransoan@gmail.com</a></p>
+  </section>
+
+  <!-- Panier -->
+  <div id="cart" class="cart">
+    <h3>Votre panier</h3>
+    <ul id="cart-items"></ul>
+    <p>Total : <span id="cart-total">0</span>€</p>
+    <button onclick="clearCart()">Vider le panier</button>
+  </div>
+
+  <footer>
+    <p>&copy; 2025 Soan BELTRAN</p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
