--- a/index.html
+++ b/index.html
@@ -40,6 +40,31 @@
       </div>
     </div>
   </section>
+<!-- Juste après la section galerie -->
+<section id="panier" class="section panier-section">
+  <h2>🛒 Votre panier</h2>
+  <ul id="cart-items" class="cart-list"></ul>
+  <p>Total : <span id="cart-total">0</span>€</p>
+  <div class="cart-actions">
+    <button onclick="clearCart()">Vider le panier</button>
+    <button onclick="openPayment()">Payer</button>
+  </div>
+</section>
+
+<!-- Fenêtre modale de paiement fictif -->
+<div id="payment-modal" class="payment-modal">
+  <div class="payment-content">
+    <span class="close" onclick="closePayment()">&times;</span>
+    <h3>Paiement</h3>
+    <form onsubmit="processPayment(event)">
+      <input type="text" placeholder="Nom complet" required>
+      <input type="text" placeholder="Numéro de carte" required>
+      <input type="text" placeholder="Date d'expiration (MM/AA)" required>
+      <input type="text" placeholder="CVC" required>
+      <button type="submit">Valider le paiement</button>
+    </form>
+  </div>
+</div>
 
   <section id="apropos" class="section">
     <h2>À propos</h2>
