--- a/index.html
+++ b/index.html
@@ -1,90 +1,64 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Galerie de Soan BELTRAN</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Galerie Photo</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
   <header>
-    <h1>🌈 Galerie de Soan</h1>
+    <h1>📸 Galerie Photo Naturelle</h1>
     <nav>
-      <ul>
-        <li><a href="#accueil">Accueil</a></li>
-        <li><a href="#galerie">Galerie</a></li>
-        <li><a href="#apropos">À propos</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
+      <a href="#galerie">Galerie</a>
+      <a href="#panier">Panier</a>
     </nav>
   </header>
-
-  <section id="accueil" class="section">
-    <h2>Bienvenue !</h2>
-    <p>Explorez et achetez mes photos numériques pour seulement 1€ chacune.</p>
-  </section>
 
   <section id="galerie" class="section">
     <h2>Galerie</h2>
     <div class="gallery">
       <div class="photo-card">
-        <img src="https://via.placeholder.com/300" alt="Nature 1">
-        <p>Nature lumineuse</p>
-        <button onclick="addToCart('Nature lumineuse')">Acheter à 1€</button>
+        <img src="https://placekitten.com/400/300" alt="Nature">
+        <p>Coucher de soleil 🌅</p>
+        <button onclick="addToCart('Coucher de soleil')">Acheter à 1€</button>
       </div>
       <div class="photo-card">
-        <img src="https://via.placeholder.com/300" alt="Ville 1">
-        <p>Ville en mouvement</p>
-        <button onclick="addToCart('Ville en mouvement')">Acheter à 1€</button>
+        <img src="https://placekitten.com/401/301" alt="Ville">
+        <p>Ville de nuit 🌃</p>
+        <button onclick="addToCart('Ville de nuit')">Acheter à 1€</button>
       </div>
     </div>
   </section>
-<!-- Juste après la section galerie -->
-<section id="panier" class="section panier-section">
-  <h2>🛒 Votre panier</h2>
-  <ul id="cart-items" class="cart-list"></ul>
-  <p>Total : <span id="cart-total">0</span>€</p>
-  <div class="cart-actions">
-    <button onclick="clearCart()">Vider le panier</button>
-    <button onclick="openPayment()">Payer</button>
-  </div>
-</section>
 
-<!-- Fenêtre modale de paiement fictif -->
-<div id="payment-modal" class="payment-modal">
-  <div class="payment-content">
-    <span class="close" onclick="closePayment()">&times;</span>
-    <h3>Paiement</h3>
-    <form onsubmit="processPayment(event)">
-      <input type="text" placeholder="Nom complet" required>
-      <input type="text" placeholder="Numéro de carte" required>
-      <input type="text" placeholder="Date d'expiration (MM/AA)" required>
-      <input type="text" placeholder="CVC" required>
-      <button type="submit">Valider le paiement</button>
-    </form>
-  </div>
-</div>
-
-  <section id="apropos" class="section">
-    <h2>À propos</h2>
-    <p>Je suis photographe passionné, et je propose mes clichés au format numérique à prix accessible.</p>
-  </section>
-
-  <section id="contact" class="section">
-    <h2>Contact</h2>
-    <p>Écrivez-moi : <a href="mailto:beltransoan@gmail.com">beltransoan@gmail.com</a></p>
-  </section>
-
-  <!-- Panier -->
-  <div id="cart" class="cart">
-    <h3>Votre panier</h3>
-    <ul id="cart-items"></ul>
+  <section id="panier" class="section panier-section">
+    <h2>🛒 Votre panier</h2>
+    <ul id="cart-items" class="cart-list"></ul>
     <p>Total : <span id="cart-total">0</span>€</p>
-    <button onclick="clearCart()">Vider le panier</button>
+    <div class="cart-actions">
+      <button onclick="clearCart()">Vider</button>
+      <button onclick="openPayment()">Payer</button>
+    </div>
+  </section>
+
+  <!-- Paiement fictif -->
+  <div id="payment-modal" class="payment-modal">
+    <div class="payment-content">
+      <span class="close" onclick="closePayment()">&times;</span>
+      <h3>Paiement</h3>
+      <form onsubmit="processPayment(event)">
+        <input type="text" placeholder="Nom complet" required>
+        <input type="text" placeholder="Numéro de carte" required>
+        <input type="text" placeholder="Date d'expiration (MM/AA)" required>
+        <input type="text" placeholder="CVC" required>
+        <button type="submit">Valider</button>
+      </form>
+    </div>
   </div>
 
   <footer>
-    <p>&copy; 2025 Soan BELTRAN</p>
+    <p>&copy; 2025 Galerie Naturelle | Soan Beltran</p>
   </footer>
 
   <script src="script.js"></script>
