--- a/index.html
+++ b/index.html
@@ -1,64 +1,72 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Galerie Photo</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Galerie d'Art Numérique</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
   <header>
-    <h1>📸 Galerie Photo Naturelle</h1>
+    <h1>Galerie d'Art Numérique</h1>
     <nav>
       <a href="#galerie">Galerie</a>
       <a href="#panier">Panier</a>
+      <a href="#contact">Contact</a>
     </nav>
   </header>
 
-  <section id="galerie" class="section">
-    <h2>Galerie</h2>
-    <div class="gallery">
-      <div class="photo-card">
-        <img src="https://placekitten.com/400/300" alt="Nature">
-        <p>Coucher de soleil 🌅</p>
-        <button onclick="addToCart('Coucher de soleil')">Acheter à 1€</button>
+  <main>
+    <section id="galerie">
+      <h2>Nos Photos</h2>
+      <div class="gallery">
+        <div class="photo-card">
+          <img src="https://placekitten.com/400/300" alt="Coucher de soleil">
+          <p>Coucher de soleil 🌅</p>
+          <button onclick="addToCart('Coucher de soleil')">Acheter à 1€</button>
+        </div>
+        <div class="photo-card">
+          <img src="https://placekitten.com/401/301" alt="Ville de nuit">
+          <p>Ville de nuit 🌃</p>
+          <button onclick="addToCart('Ville de nuit')">Acheter à 1€</button>
+        </div>
       </div>
-      <div class="photo-card">
-        <img src="https://placekitten.com/401/301" alt="Ville">
-        <p>Ville de nuit 🌃</p>
-        <button onclick="addToCart('Ville de nuit')">Acheter à 1€</button>
+    </section>
+
+    <section id="panier">
+      <h2>🛒 Votre panier</h2>
+      <ul id="cart-items"></ul>
+      <p>Total : <span id="cart-total">0</span>€</p>
+      <div class="cart-actions">
+        <button onclick="clearCart()">Vider</button>
+        <button onclick="openPayment()">Payer</button>
+      </div>
+    </section>
+
+    <div id="payment-modal" class="payment-modal">
+      <div class="payment-content">
+        <span class="close" onclick="closePayment()">&times;</span>
+        <h3>Paiement</h3>
+        <form onsubmit="processPayment(event)">
+          <input type="text" placeholder="Nom complet" required />
+          <input type="text" placeholder="Numéro de carte" required />
+          <input type="text" placeholder="Date d'expiration" required />
+          <input type="text" placeholder="CVC" required />
+          <button type="submit">Valider</button>
+        </form>
       </div>
     </div>
-  </section>
 
-  <section id="panier" class="section panier-section">
-    <h2>🛒 Votre panier</h2>
-    <ul id="cart-items" class="cart-list"></ul>
-    <p>Total : <span id="cart-total">0</span>€</p>
-    <div class="cart-actions">
-      <button onclick="clearCart()">Vider</button>
-      <button onclick="openPayment()">Payer</button>
-    </div>
-  </section>
-
-  <!-- Paiement fictif -->
-  <div id="payment-modal" class="payment-modal">
-    <div class="payment-content">
-      <span class="close" onclick="closePayment()">&times;</span>
-      <h3>Paiement</h3>
-      <form onsubmit="processPayment(event)">
-        <input type="text" placeholder="Nom complet" required>
-        <input type="text" placeholder="Numéro de carte" required>
-        <input type="text" placeholder="Date d'expiration (MM/AA)" required>
-        <input type="text" placeholder="CVC" required>
-        <button type="submit">Valider</button>
-      </form>
-    </div>
-  </div>
+    <section id="contact">
+      <h2>📬 Me Contacter</h2>
+      <p>Vous avez une question ou une demande particulière ?</p>
+      <a class="contact-link" href="mailto:beltransoan@gmail.com">beltransoan@gmail.com</a>
+    </section>
+  </main>
 
   <footer>
-    <p>&copy; 2025 Galerie Naturelle | Soan Beltran</p>
+    <p>&copy; 2025 Galerie d'Art Numérique - Soan Beltran</p>
   </footer>
 
   <script src="script.js"></script>
