--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h2>Galerie</h2>
     <div class="gallery">
       <div class="photo-card">
-        <img src="https://placekitten.com/400/300" alt="Nature">
+        <img src="https://github.com/user-attachments/assets/d31467c4-17bd-48bf-9d9c-dce14dccf5a5" alt="Nature">
         <p>Coucher de soleil 🌅</p>
         <button onclick="addToCart('Coucher de soleil')">Acheter à 1€</button>
       </div>
