--- a/index.html
+++ b/index.html
@@ -21,10 +21,20 @@
     <div class="gallery">
       <div class="photo-card">
         <img src="https://github.com/user-attachments/assets/d31467c4-17bd-48bf-9d9c-dce14dccf5a5" alt="Nature">
-        <p>Coucher de soleil 🌅</p>
-        <button onclick="addToCart('Coucher de soleil')">Acheter à 1€</button>
+        <p>porche flou de mouvement</p>
+        <button onclick="addToCart('porche flou de mouvement')">Acheter à 1€</button>
       </div>
       <div class="photo-card">
+        <img src="https://placekitten.com/401/301" alt="Ville">
+        <p>Ville de nuit 🌃</p>
+        <button onclick="addToCart('Ville de nuit')">Acheter à 1€</button>
+      </div>
+       <div class="photo-card">
+        <img src="https://placekitten.com/401/301" alt="Ville">
+        <p>Ville de nuit 🌃</p>
+        <button onclick="addToCart('Ville de nuit')">Acheter à 1€</button>
+      </div>
+       <div class="photo-card">
         <img src="https://placekitten.com/401/301" alt="Ville">
         <p>Ville de nuit 🌃</p>
         <button onclick="addToCart('Ville de nuit')">Acheter à 1€</button>
