--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <h2>Galerie</h2>
     <div class="gallery">
       <div class="photo-card">
-        <img src="https://github.com/user-attachments/assets/d31467c4-17bd-48bf-9d9c-dce14dccf5a5" alt="Nature">
+        <img src="https://github.com/user-attachments/assets/d31467c4-17bd-48bf-9d9c-dce14dccf5a5" alt="voiture de course">
         <p>porche flou de mouvement</p>
         <button onclick="addToCart('porche flou de mouvement')">Acheter à 1€</button>
       </div>
       <div class="photo-card">
-        <img src="https://placekitten.com/401/301" alt="Ville">
-        <p>Ville de nuit 🌃</p>
+        <img src="https://github.com/user-attachments/assets/054fbe66-ed64-4bf1-a8d0-9422caa653e4" alt="torro">
+        <p>course carmaguaise</p>
         <button onclick="addToCart('Ville de nuit')">Acheter à 1€</button>
       </div>
        <div class="photo-card">
