--- a/index.html
+++ b/index.html
@@ -71,12 +71,13 @@
   <section id="contact" class="contact-section">
     <h2>Contact</h2>
     <p>Une question ? Une demande particulière ? Écrivez-moi !</p>
-    <form class="contact-form" onsubmit="event.preventDefault(); alert('Message envoyé !');">
-      <input type="text" placeholder="Votre nom" required>
-      <input type="email" placeholder="Votre email" required>
-      <textarea placeholder="Votre message" required></textarea>
-      <button type="submit">Envoyer</button>
-    </form>
+   <form class="contact-form" action="https://formsubmit.co/beltransoan@mail.com" method="POST">
+  <input type="text" name="name" placeholder="Votre nom" required>
+  <input type="email" name="email" placeholder="Votre email" required>
+  <textarea name="message" placeholder="Votre message" required></textarea>
+  <button type="submit">Envoyer</button>
+</form>
+
   </section>
 
   <footer>
