--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
   <input type="text" name="name" placeholder="Votre nom" required>
   <input type="email" name="email" placeholder="Votre email" required>
   <textarea name="message" placeholder="Votre message" required></textarea>
+  <input type="hidden" name="_next" value="https://tonsite.com/merci.html">
   <button type="submit">Envoyer</button>
 </form>
 
