--- a/index.html
+++ b/index.html
@@ -71,12 +71,21 @@
   <section id="contact" class="contact-section">
     <h2>Contact</h2>
     <p>Une question ? Une demande particulière ? Écrivez-moi !</p>
-   <form class="contact-form" action="https://formsubmit.co/beltransoan@mail.com" method="POST">
-  <input type="text" name="name" placeholder="Votre nom" required>
-  <input type="email" name="email" placeholder="Votre email" required>
-  <textarea name="message" placeholder="Votre message" required></textarea>
-  <input type="hidden" name="_next" value="https://soanbeltran.github.io/galerie-photographique-en-ligne/">
-  <button type="submit">Envoyer</button>
+  <!-- modify this form HTML and place wherever you want your form -->
+<form
+  action="https://formspree.io/f/mdkejvyz"
+  method="POST"
+>
+  <label>
+    Your email:
+    <input type="email" name="email">
+  </label>
+  <label>
+    Your message:
+    <textarea name="message"></textarea>
+  </label>
+  <!-- your other form fields go here -->
+  <button type="submit">Send</button>
 </form>
 
   </section>
