--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <header>
-    <h1>📸 Galerie Photo Naturelle</h1>
+    <h1>📸 Galerie Photo soan</h1>
     <nav>
       <a href="#galerie">Galerie</a>
       <a href="#panier">Panier</a>
@@ -91,7 +91,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Galerie Naturelle | Soan Beltran</p>
+    <p>&copy; 2025 Galerie en ligne | Soan Beltran</p>
   </footer>
 
   <script src="script.js"></script>
@@ -102,7 +102,7 @@
   /* customize formbutton below*/     
   formbutton("create", {
     action: "https://formspree.io/f/mdkejvyz",
-    title: "How can we help?",
+    title: "une demande particulière ??",
     fields: [
       { 
         type: "email", 
