--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <button onclick="addToCart('Ville de nuit')">Acheter à 1€</button>
       </div>
        <div class="photo-card">
-        <img src="https://placekitten.com/401/301" alt="Ville">
-        <p>Ville de nuit 🌃</p>
-        <button onclick="addToCart('Ville de nuit')">Acheter à 1€</button>
+        <img src="https://github.com/user-attachments/assets/26856d65-234e-4b21-9e5d-bbb2478c13b4" alt="coucher de soleil sur la mer">
+        <p>coucher de soleil sur la mer</p>
+        <button onclick="addToCart('coucher de soleil sur la mer')">Acheter à 1€</button>
       </div>
        <div class="photo-card">
         <img src="https://placekitten.com/401/301" alt="Ville">
