--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <button onclick="addToCart('coucher de soleil sur la mer')">Acheter à 1€</button>
       </div>
        <div class="photo-card">
-        <img src="https://placekitten.com/401/301" alt="Ville">
-        <p>Ville de nuit 🌃</p>
-        <button onclick="addToCart('Ville de nuit')">Acheter à 1€</button>
+        <img src="https://github.com/user-attachments/assets/e34aaaa9-9eb1-4a86-9479-efb972d2d00e" alt="photo de rue de poubelle">
+        <p>photo de rue de poubelle</p>
+        <button onclick="addToCart('photo de rue de poubelle')">Acheter à 1€</button>
       </div>
     </div>
   </section>
