--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Galerie Photo</title>
+  <title>Galerie Photo numérique</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,6 +20,7 @@
     <h2>Galerie</h2>
     <div class="gallery">
       <div class="photo-card">
+        <h3>je suis un photographe amateur qui aime tous styles de photos et j'en partage sur ce site, vous avez la possibilité de les acheter en format numérique.</h3>
         <img src="https://github.com/user-attachments/assets/d31467c4-17bd-48bf-9d9c-dce14dccf5a5" alt="voiture de course">
         <p>porche flou de mouvement</p>
         <button onclick="addToCart('porche flou de mouvement')">Acheter à 1€</button>
