--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <nav>
       <a href="#galerie">Galerie</a>
       <a href="#panier">Panier</a>
+      <a href="#contact">Me contacter</a>
     </nav>
   </header>
 
