--- a/index.html
+++ b/index.html
@@ -90,5 +90,7 @@
   </footer>
 
   <script src="script.js"></script>
+  <audio id="click-sound" src="click.mp3" preload="auto"></audio>
+
 </body>
 </html>
