--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
 
   <script src="script.js"></script>
   <audio id="click-sound" src="click.mp3" preload="auto"></audio>
+<!-- Modale d'image plein écran -->
+<div id="image-modal" class="image-modal">
+  <span class="close-image" onclick="closeImageModal()">&times;</span>
+  <img id="modal-image" src="" alt="Image agrandie">
+</div>
 
 </body>
 </html>
